--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 ========================================================================== */
 body {
   font-family: "Open sans", sans-serif;
-  color: ;
+  color:hsla(0,0%,23%,1.00) ;
   background-image:url(../images/backgrounds/white-background-5.jpg); 
   background-repeat:no-repeat;
   background-size:cover;
@@ -38,14 +38,14 @@ a:hover, a:focus, a:active {
 .navbar-static-top {
   margin: 0;
   border: 0;
-  color: #fff;
+  color: hsla(0,2%,22%,1.00);
   position:fixed; 
   z-index:99999;
   width:100%;
 }
 
 .navbar-top {
-  background:hsla(0,1%,21%,1.00);
+  background:hsla(0,0%,89%,1.00);
   font-size: 12px;
   padding: 3px 0;
 }
@@ -61,19 +61,24 @@ a:hover, a:focus, a:active {
 
 .navbar-main {
   margin-bottom: 0;
-  color: #fff;
-  background:hsla(0,2%,22%,1.00);
+  color: hsla(0,2%,22%,1.00);
+  background: #fff;
 }
 .navbar-main .navbar-brand {
   border-bottom: none !important;
+	position:absolute;
+	padding-top:10px;
 }
 .navbar-main a:hover,
 .navbar-main a:active,
 .navbar-main a:focus,
 .navbar-main a.is-active {
   background: none !important;
-  color: inherit;
-  border-bottom: 2px solid #fff;
+  color: hsla(0,0%,39%,1.00);
+  border-bottom: 2px solid #000;
+}
+.navbar-nav:hover{
+	color:hsla(0,0%,34%,1.00);
 }
 .navbar-main .submenu {
   position: absolute;
@@ -632,7 +637,7 @@ form .alert {
 
 .nav > li > a:hover, .nav > li > a:focus {
   background: hsla(0,0%,60%,0.83);
-  color: #fff;
+  color: hsla(226,100%,26%,1.00);
 }
 
 /* Accordion
